# minecraft-advancement-tracker

./: .env  .gitignore  5f7470a0-686e-4850-b89c-df74dd5c215b.json  Cargo.toml  LICENSE  README.md  advancements_master.json  ci.Dockerfile  netlify-build.sh  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs
src/: lib.rs
static/: index.css  index.html  index.js
web/: index.html  index.js
web/js/: advancement.js  mojang.js  tabs.js
