[package]
name = "minecraft-advancement-tracker"
description = "Track Progress on Advancements"
version = "0.1.0"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.22"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }
web-sys = { version = "0.3.48", features = ["console"] }
wee_alloc = "0.4.2"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
